web/src/pages/links/links.scss
@import '../../styles/variables';
@import '../../styles/mixins';

.header {
  background-color: #444444;
  height: 300px;
  width: 100%;
  margin-bottom: 200px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  @include screen-tablet-max {
    height: 200px;
  }
}
.header::after {
  content: '';
  border-top-right-radius: 50% 100%;
  border-top-left-radius: 50% 100%;
  position: absolute;
  bottom: 0;
  height: 50%;
  width: 100%;
  background-color: white;
  @include screen-tablet-max {
    border-top-right-radius: 50% 50%;
    border-top-left-radius: 50% 50%;
    height: 60%;
  }
}

.logo {
  position: relative;
  z-index: 2;
  width: 350px; 
  height: 350px;
  @include screen-tablet-max {
    width: 200px; 
    height: 200px;
  }
}

